# libentropy

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README  configure.ac
include/: Makefile.am  libe2ntropy.h  libentropy.h
lib/: Makefile.am  libe2ntropy.c  libe2ntropy.pc.in  libentropy.c  libentropy.pc.in
src/: Makefile.am  e2ntropy.c  entropy.c  entropy.h
tools/: Makefile.am
tools/ssss/: Makefile.am  ssss.c  todo.org
